mobile overflow fix

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,3 @@
-html, body {
-    overflow-x: hidden;
-}
 .tefl-container {
     max-width: 1000px;
     margin-left: auto;
@@ -279,7 +276,7 @@ md-toolbar {
     box-shadow:         0px -4px 3px rgba(50, 50, 50, 0.25);
 }
 @media (max-width: 960px) {
-    #print-button, #download-button {
+    #print-button, #download-button, #back-button {
         display: none !important;
     }
 }
